# drf-openapi-tester

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
openapi_tester/: __init__.py  clients.py  constants.py  exceptions.py  loaders.py  schema_tester.py  validators.py
test_project/: urls.py
test_project/api/swagger/: auto_schemas.py  responses.py
test_project/api/views/: cars.py  i18n.py  items.py  pets.py  products.py  trucks.py
tests/: schema_converter.py  test_clients.py  test_errors.py  test_loaders.py  test_schema_tester.py  test_validators.py  utils.py
