[project]
name = "drf-openapi-tester"
version = "2.3.3"
description = "Test utility for validating OpenAPI response documentation"
dependencies = [
    "django >=3,<4 ; python_version <= '3.7'",
    "django >=3,<5 ; python_version >= '3.8'",
    "djangorestframework",
    "inflection",
    "openapi-spec-validator >=0.4",
    "prance",
    "pyYAML",
]
requires-python = ">= 3.7"
authors = [
    { name = "Sondre Lillebø Gundersen", email = "sondrelg@live.no" },
    { name = "Na'aman Hirschfeld", email = "nhirschfeld@gmail.com" },
]
license = {file = "LICENSE"}
readme = "README.md"
keywords = ["openapi", "swagger", "api", "testing", "schema", "django", "drf"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django :: 3.0",
    "Framework :: Django :: 3.1",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python",
    "Topic :: Documentation",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Testing :: Unit",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[project.optional-dependencies]
drf-yasg = ["drf-yasg", "setuptools"]
drf-spectacular = ["drf-spectacular"]

[project.urls]
Homepage = "https://github.com/snok/drf-openapi-tester"
Documentation = "https://github.com/snok/drf-openapi-tester"
Repository = "https://github.com/snok/drf-openapi-tester"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.run]
source = [
    "openapi_tester",
]
omit = [
    "manage.py",
    "test_project/*",
]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    "raise NotImplementedError",
    "pragma: no cover",
    "if TYPE_CHECKING:",
]

[tool.django-stubs]
django_settings_module = "test_project.settings"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["openapi_tester"]

[tool.mypy]
show_column_numbers = true
show_error_context = false
ignore_missing_imports = true
warn_unused_ignores = true
warn_no_return = false
warn_redundant_casts = true
plugins = [
    "mypy_drf_plugin.main",
    "mypy_django_plugin.main",
]

[tool.mypy_django_plugin]
ignore_missing_model_attributes = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "test_project.settings"

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = [
    "A",
    "B",
    "C4",
    "E",
    "F",
    "G",
    "I",
    "ICN",
    "INP",
    "INT",
    "ISC",
    "LOG",
    "PIE",
    "PT",
    "Q",
    "RET",
    "RSE",
    "SIM",
    "T20",
    "TCH",
    "TCH",
    "W",
    "YTT",
]

[tool.rye]
managed = true
dev-dependencies = [
    "coverage[toml] >=6,<7",
    "Faker",
    "pre-commit",
    "pylint",
    "pytest",
    "pytest-django",
]
